Double Border checkout fixed

--- a/assets/css/unminified/compatibility/edd-rtl.css
+++ b/assets/css/unminified/compatibility/edd-rtl.css
@@ -974,7 +974,6 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 .edd-checkout #edd_checkout_cart th,
 .edd-checkout #edd_checkout_cart td {
   text-align: right;
-  border: 1px solid #eee;
   padding: 15px 30px;
 }
 
