--- a/sass/site/compatibility/edd.scss
+++ b/sass/site/compatibility/edd.scss
@@ -966,7 +966,6 @@ a.edd-add-to-cart .edd-add-to-cart-label, .edd-loading {
 	#edd_checkout_cart th,
 	#edd_checkout_cart td {
 		text-align: left;
-		border: 1px solid #eee;
 		padding: 15px 30px;
 	}
 	#edd_checkout_cart td img {
